docs: update .svg link

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 <footer class="footer">
     <div class="container">
         <p>© 2022  <a class="link" href="https://github.com/julsiju"><strong>julsiju</strong></a></p>
-        <a href="https://rs.school/js/"><img src="assets/img/logo.jpg" width="110" 
+        <a href="https://rs.school/js/"><img src="https://rs.school/images/rs_school_js.svg" width="110" 
             height="50" alt="rss"></a>
     </div>
 </footer>
